--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aiosqlite = "^0.20.0"
 pydantic = "^2.8.0"
 fastapi = "^0.111.0"
 pytest = "^8.2.2"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
