--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "CRM for Real Estate"
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "crm_app"}]
+
 
 [tool.poetry.dependencies]
 python = "3.12.4"
@@ -15,6 +15,11 @@ pydantic = "^2.8.0"
 fastapi = "^0.111.0"
 pytest = "^8.2.2"
 psycopg2-binary = "^2.9.9"
+pydantic-settings = "^2.4.0"
+alembic = "^1.13.2"
+asyncpg = "^0.29.0"
+pytest-mock = "^3.14.0"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
