--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,17 @@ services:
   web:
     build: .
     environment:
-      SQLALCHEMY_DATABASE_URL: 'postgresql+psycopg2://postgres:postgres@db:5433/postgres'
+      SQLALCHEMY_DATABASE_URL: 'postgresql+psycopg2://postgres:postgres@db:5432/postgres'
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - crm_app_app:/home/app
+      - crm_app:/home/app
     ports:
       - "8000:8000"
     restart: always
     depends_on:
-      db:
-        condition: service_healthy
+      alembic:
+        condition: service_started
+
   db:
     image: postgres:15.4
     environment:
@@ -23,19 +24,24 @@ services:
       - "5433:5432"
     restart: unless-stopped
     volumes:
-      - ".postgres-data:/var/lib/postgresql/data"
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres" ]
-      timeout: 45s
+      test: ["CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres"]
       interval: 10s
-      retries: 10
+      timeout: 5s
+      retries: 5
+
   alembic:
     build: .
     environment:
       SQLALCHEMY_DATABASE_URL: 'postgresql+psycopg2://postgres:postgres@db:5432/postgres'
+    depends_on:
+      db:
+        condition: service_healthy
     command: alembic upgrade head
-
-
+    restart: "no"
 
 volumes:
   crm_app:
+  postgres-data:
+  
