--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ alembic = "^1.13.2"
 asyncpg = "^0.29.0"
 pytest-mock = "^3.14.0"
 pytest-cov = "^5.0.0"
+httpx = "^0.27.2"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
