--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,22 @@ sqlalchemy = "^2.0.31"
 aiosqlite = "^0.20.0"
 pydantic = "^2.8.0"
 fastapi = "^0.111.0"
-pytest = "^8.2.2"
 psycopg2-binary = "^2.9.9"
-pydantic-settings = "^2.4.0"
-alembic = "^1.13.2"
-asyncpg = "^0.29.0"
-pytest-mock = "^3.14.0"
-pytest-cov = "^5.0.0"
 httpx = "^0.27.2"
-pytest-asyncio = "^0.24.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+pytest-asyncio = "^0.25.0"
+pytest-mock = "^3.14.0"
+mypy = "^1.13.0"
+
+
+[tool.poetry.group.local.dependencies]
+pydantic-settings = "^2.7.0"
+alembic = "^1.14.0"
+asyncpg = "^0.30.0"
 
 [build-system]
 requires = ["poetry-core"]
