add endpoint 'get_notifications'

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PORT = 5432
 DB_NAME = postgres
 DB_USER = postgres
 DB_PASS = postgres
+#API_TOKEN = 2125644659:AAHcuMrL5T4taHIhHIAoiykrserfP2iy_cU
