--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^2.8.0"
 fastapi = "^0.111.0"
 psycopg2-binary = "^2.9.9"
 httpx = "^0.27.2"
+aiogram = "^3.16.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -23,6 +24,7 @@ pytest-cov = "^6.0.0"
 pytest-asyncio = "^0.25.0"
 pytest-mock = "^3.14.0"
 mypy = "^1.13.0"
+ruff = "^0.8.3"
 
 
 [tool.poetry.group.local.dependencies]
